5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1594_1802.log
== TEST (2019-04-23 17:47:23) 
-- CODE:
from math import *
var1=float(input("pontos de vida iniciais:"))
var2=int(input("D1:"))
var3=int(input("D2:"))
dano=((5*var2)**1/2)+((pi)**(var3/3))
vidafinal=(var1-dano)
print(vidafinal)
-- OUTPUT:
187.63039559891064
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:47:59) 
-- CODE:
from math import *
var1=int(input("pontos de vida iniciais:"))
var2=int(input("D1:"))
var3=int(input("D2:"))
dano=((5*var2)**1/2)+((pi)**(var3/3))
vidafinal=(var1-dano)
print(vidafinal)
-- OUTPUT:
187.63039559891064
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:48:07) 
-- CODE:
from math import *
var1=int(input("pontos de vida iniciais:"))
var2=int(input("D1:"))
var3=int(input("D2:"))
dano=((5*var2)**1/2)+((pi)**(var3/3))
vidafinal=(var1-dano)
print(vidafinal)
-- OUTPUT:
187.63039559891064
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:48:27) 
-- CODE:
from math import *
var1=int(input("pontos de vida iniciais:"))
var2=int(input("D1:"))
var3=int(input("D2:"))
dano=((5*var2)**1/2)+((pi)**(var3//3))
vidafinal=(var1-dano)
print(vidafinal)
-- OUTPUT:
187.63039559891064
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:50:01) 
-- CODE:
from math import *
var1=int(input("pontos de vida iniciais:"))
var2=int(input("D1:"))
var3=int(input("D2:"))
dano=int(((5*var2)**1/2)+((pi)**(var3//3)))
vidafinal=(var1-dano)
print(vidafinal)
-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:35:09) 
-- CODE:
from math import *
var1=int(input("pontos de vida iniciais:"))
var2=int(input("D1:"))
var3=int(input("D2:"))
x=((5*var2)**1/2)
y=((pi)**var3//2)
dano=int(x+y)
vidafinal=(var1-dano)
print(vidafinal)
-- OUTPUT:
-282
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:36:26) 
-- CODE:
x=(5)**1/2
print(round(x, 0))
-- OUTPUT:
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:37:56) 
-- CODE:
from math import *
var1=int(input("pontos de vida iniciais:"))
var2=int(input("D1:"))
var3=int(input("D2:"))
x=((5*var2)**1/2)
y=((pi)**var3//3)
print(x)
print(y)
-- OUTPUT:
2.5
320.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:39:46) 
-- CODE:
from math import *
var1=int(input("pontos de vida iniciais:"))
var2=int(input("D1:"))
var3=int(input("D2:"))
dano=((5*var2)**1/2)+((pi)**var3//3)
vidarestante=(var1-dano)
-- OUTPUT:
2.5
320.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:40:04) 
-- CODE:
from math import *
var1=int(input("pontos de vida iniciais:"))
var2=int(input("D1:"))
var3=int(input("D2:"))
dano=((5*var2)**1/2)+((pi)**var3//3)
vidarestante=(var1-dano)
print(vidarestante)
-- OUTPUT:
-122.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:44:12) 
-- CODE:
from math import *
var1=int(input("pontos de vida iniciais:"))
var2=int(input("D1:"))
var3=int(input("D2:"))
dano=int(round(((5*var2)**1/2)+((pi)**var3//3), 0)
vidarestante=(var1-dano)
print(vidarestante)
-- ERROR:
File "XXXX", line 6
    vidarestante=(var1-dano)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:44:51) 
-- CODE:
from math import *
var1=int(input("pontos de vida iniciais:"))
var2=int(input("D1:"))
var3=int(input("D2:"))
dano=((5*var2)**1/2)+((pi)**var3//3)
vidarestante=(var1-dano)
print(round(vidarestante), 0)
-- OUTPUT:
-122 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:46:36) 
-- CODE:
from math import * 
s=(pi)**4//3
print(s7)7
-- ERROR:
File "XXXX", line 3
    print(s7)7
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:46:45) 
-- CODE:
from math import * 
s=(pi)**4//3
print(s)
-- OUTPUT:
32.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:47:19) 
-- CODE:
from math import * 
s=(pi)**4//3
print(s)
a=(5*8)**1/2
print(a)
-- OUTPUT:
32.0
20.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:47:43) 
-- CODE:
from math import * 
s=(pi)**4//3
print(s)
a=(2**2)
print(a)
-- OUTPUT:
32.0
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:48:08) 
-- CODE:
from math import * 
s=(pi)**4//3
print(s)
a=((5*8)**1/2)
print(a)
-- OUTPUT:
32.0
20.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:48:24) 
-- CODE:
from math import * 
s=(pi)**4//3
print(s)
a=((5*8)**1//2)
print(a)
-- OUTPUT:
32.0
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:48:56) 
-- CODE:
from math import * 
s=(pi)**4//3
print(s)
a=((6*6)**1/2)
print(a)
-- OUTPUT:
32.0
18.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:49:13) 
-- CODE:
from math import * 
s=(pi)**4//3
print(s)
a=(6*6)**(1/2)
print(a)
-- OUTPUT:
32.0
6.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:49:24) 
-- CODE:
from math import * 
s=(pi)**4//3
print(s)
a=(5*8)**(1/2)
print(a)
-- OUTPUT:
32.0
6.324555320336759
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:51:08) 
-- CODE:
from math import *
var1=int(input("pontos de vida iniciais:"))
var2=int(input("D1:"))
var3=int(input("D2:"))
x=(pi)**(var3//3)
y=(5*var2)**(1/2)
dano=int(x+y)
vidafinal=(var1-dano)
print(vidafinal)
-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:51:45) 
-- CODE:
from math import *
var1=int(input("pontos de vida iniciais:"))
var2=int(input("D1:"))
var3=int(input("D2:"))
x=(pi)**(var3//3)
y=(5*var2)**(1/2)
dano=(x+y)
vidafinal=(var1-dano)
print(vidafinal)
-- OUTPUT:
187.89432762141087
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:52:00) 
-- CODE:
from math import *
var1=int(input("pontos de vida iniciais:"))
var2=int(input("D1:"))
var3=int(input("D2:"))
x=(pi)**(var3//3)
y=(5*var2)**(1/2)
dano=(x+y)
vidafinal=(var1-dano)
print(int(vidafinal))
-- OUTPUT:
187
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 19:52:06) 
-- CODE:
from math import *
var1=int(input("pontos de vida iniciais:"))
var2=int(input("D1:"))
var3=int(input("D2:"))
x=(pi)**(var3//3)
y=(5*var2)**(1/2)
dano=(x+y)
vidafinal=(var1-dano)
print(int(vidafinal))
-- EXECUTION TIME:
0.191544
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
187
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
284
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:52:54) 
-- CODE:
from math import *
var1=float(input("pontos de vida iniciais:"))
var2=int(input("D1:"))
var3=int(input("D2:"))
x=(pi)**(var3//3)
y=(5*var2)**(1/2)
dano=(x+y)
vidafinal=(var1-dano)
print(int(vidafinal))
-- OUTPUT:
187
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 19:52:58) 
-- CODE:
from math import *
var1=float(input("pontos de vida iniciais:"))
var2=int(input("D1:"))
var3=int(input("D2:"))
x=(pi)**(var3//3)
y=(5*var2)**(1/2)
dano=(x+y)
vidafinal=(var1-dano)
print(int(vidafinal))
-- EXECUTION TIME:
0.157248
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
187
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
284
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:53:41) 
-- CODE:
from math import *
var1=int(input("pontos de vida iniciais:"))
var2=int(input("D1:"))
var3=int(input("D2:"))
x=(pi)**(var3//3)
y=(5*var2)**(1/2)
dano=(x+y)
vidafinal=(var1-dano)
print(int(vidafinal))
-- OUTPUT:
187
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 19:53:44) 
-- CODE:
from math import *
var1=int(input("pontos de vida iniciais:"))
var2=int(input("D1:"))
var3=int(input("D2:"))
x=(pi)**(var3//3)
y=(5*var2)**(1/2)
dano=(x+y)
vidafinal=(var1-dano)
print(int(vidafinal))
-- EXECUTION TIME:
0.127681
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
187
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
284
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:56:31) 
-- CODE:
from math import *
var1=int(input("pontos de vida iniciais:"))
var2=int(input("D1:"))
var3=int(input("D2:"))
x=int((pi)**(var3//3))
y=int((5*var2)**(1/2))
dano=int(x+y)
vidafinal=(var1-dano)
print(vidafinal)
-- OUTPUT:
189
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:56:34) 
-- CODE:
from math import *
var1=int(input("pontos de vida iniciais:"))
var2=int(input("D1:"))
var3=int(input("D2:"))
x=int((pi)**(var3//3))
y=int((5*var2)**(1/2))
dano=int(x+y)
vidafinal=(var1-dano)
print(vidafinal)
-- OUTPUT:
189
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:56:54) 
-- CODE:
from math import *
var1=int(input("pontos de vida iniciais:"))
var2=int(input("D1:"))
var3=int(input("D2:"))
x=int((pi)**(var3//3))
y=int((5*var2)**(1/2))
dano=int(x+y)
vidafinal=(var1-dano)
print(int(vidafinal))
-- OUTPUT:
189
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:57:18) 
-- CODE:
from math import *
var1=int(input("pontos de vida iniciais:"))
var2=int(input("D1:"))
var3=int(input("D2:"))
x=(pi)**(var3//3)
y=(5*var2)**(1/2)
dano=(x+y)
vidafinal=(var1-dano)
print(int(vidafinal))
-- OUTPUT:
187
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 19:57:22) 
-- CODE:
from math import *
var1=int(input("pontos de vida iniciais:"))
var2=int(input("D1:"))
var3=int(input("D2:"))
x=(pi)**(var3//3)
y=(5*var2)**(1/2)
dano=(x+y)
vidafinal=(var1-dano)
print(int(vidafinal))
-- EXECUTION TIME:
0.219547
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
187
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
284
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
